fix: aligned about grid a bit better

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -79,22 +79,15 @@
 
     @include media-queries($lg, 99999999px) {
       flex-direction: row;
-      width: 80%;
+      flex-grow: 2 1 auto;
+      gap: 1rem;
     }
 
     &-item {
-      flex-grow: 1;
-
       &:last-child {
-        width: 100%;
-
-        @include media-queries($md, $lg) {
-          width: 70%;
-        }
-
-        @include media-queries($lg, 99999999px) {
-          width: 80%;
-        }
+        display: flex;
+        flex-direction: column;
+        align-items: center;
       }
 
       &-card {
@@ -103,6 +96,10 @@
         justify-content: center;
         text-align: center;
         margin: 10px;
+
+        @include media-queries($xl, 99999999px) {
+          width: 60%;
+        }
 
         a {
           img {
